# any-auto-register

./: .gitignore  Dockerfile  README.md  docker-compose.yml  launch.md  main.py  pyproject.toml  smstome_tool.py  start_backend.bat  start_backend.ps1  test_tmailor_chatgpt.py  test_tmailor_existing.py  test_tmailor_fixed.py
.github/workflows/: docker-image.yml
api/: accounts.py  actions.py  chatgpt.py  config.py  contribution.py  integrations.py  mail_imports.py  outlook.py  proxies.py  tasks.py  tmailor.py
core/: base_captcha.py  base_mailbox.py  base_platform.py  db.py  ddg_mailbox.py  ddg_tracker.py  email_domain_policy.py  gptmail_automation.py  mailtm_mailbox.py  proxy_pool.py  proxy_utils.py  scheduler.py  task_runtime.py  tmailor_mailbox.py
docker/: entrypoint.sh
docs/: CLAWCLOUD_DEPLOY.md
electron/: package.json  pnpm-lock.yaml
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
services/: chatgpt_sync.py  cliproxyapi_sync.py  cpa_manager.py  external_apps.py  external_sync.py  solver_manager.py
tests/: test_base_mailbox_cfworker.py  test_cfrouting_mailbox.py  test_cfrouting_mailbox_live.py  test_chatgpt_plugin.py  test_chatgpt_register.py  test_cliproxyapi_sync.py  test_email_domain_policy.py  test_external_sync_contribution_mode.py  test_gptmail_mailbox.py  test_luckmail_mailbox.py  test_mail_imports_service.py  test_outlook_mailbox_oauth.py  test_proxy_pool.py  test_register_task_controls.py  test_task_runtime.py  test_tempmailorg_mailbox.py
参考/: config.json  debug_test.js  index.js  package-lock.json  package.json
参考/src/: config.js  (+4 more)
(+16 files in other folders)
